[package]
name = "archive-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
tokio = { version = "1.27.0", features = ["full"] }
async-std = "1.12.0"
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }